# Embedded-Scheduler-Project

./: .gitignore  README.md  notes.txt
C_Implementation/Debug/: makefile  objects.list
C_Implementation/Debug/Src/: subdir.mk
C_Implementation/Inc/: gpio.h  main.h  tasks.h
C_Implementation/Src/: main.c  tasks.c
Inc/: gpio.h  main.h  tasks.h
Rust_Implemenation/: Cargo.toml
Rust_Implemenation/.cargo/: config
Rust_Implemenation/src/: consts.rs  fault.rs  gpio.rs  main.rs  scheduler.rs  systick.rs
Src/: gpio.c  main.c  tasks.c
