[package]
name = "scheduler"
version = "0.1.1"
authors = ["bilel JALOULI <bilel.jlouli@insat.ucar.tn>"]
edition = "2018"


[dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
panic-halt = "0.2.0"
stm32f4 = { version = "0.14", features = ["stm32f407"] }
naked-function = "=0.1.5"


[dependencies.stm32f4xx-hal]
version = "0.10.0"
features = ["stm32f407"]

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[[bin]]
name = "scheduler"
path = "src/main.rs"
test = false
bench = false
